# pytorch-ndonnx

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CHANGELOG.rst  LICENSE  README.md  bench.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  package.yml
benchmarks/: bench.py
benchmarks/models/: __init__.py  dcgan.py  mnist.py  srresnet.py
docs/: basic_usage.md  index.md  pytorch_functions.md  tensor.md
pytorch_ndonnx/: __init__.py  _jit.py  _patch.py  _tensor.py
scripts/: gen-supported-functions.py
tests/: test_distilbert.py  test_local_models.py  test_opinfo.py  test_signatures.py  test_upstream_models.py
