[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-ndonnx"
description = "Pytorch-to-ONNX converters based on ndonnx"
# replaced in CI
version = "0.0.0"
authors = [{ name = "Christian Bourjau", email = "c.bourjau@posteo.de" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = ["ndonnx", "spox", "torch", "typing_extensions", "numpy"]
[project.urls]
repository = "https://github.com/cbourjau/pytorch-ndonnx"

[tool.hatch.build.targets.wheel]
packages = ["pytorch_ndonnx"]

[project.scripts]

[tool.docformatter]
black = true # only sets the style options to the default values of black

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.10'
no_implicit_optional = true
check_untyped_defs = true

exclude = ["docs/"]

# If you run into `missing library stubs or py.typed marker` errors
# and no stubs are available for this library, you can add an override
# to ignore the missing imports.
[[tool.mypy.overrides]]
module = ["torchvision.models", "onnxruntime"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.typos]
# Taken from:
# https://github.com/crate-ci/typos/blob/master/docs/reference.md#example-configurations
default.extend-ignore-re = [
  # Disable spell-checking for an individual line.
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
  # Disable spell-checking for a code block.
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]
